--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,4 +56,24 @@
   body {
     @apply bg-background text-foreground;
   }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h1 {
+    @apply text-4xl leading-[1.1] md:text-5xl lg:text-6xl xl:text-7xl;
+  }
+  h2 {
+    @apply text-3xl md:text-4xl;
+  }
+  h3 {
+    @apply text-2xl md:text-3xl;
+  }
+  h4 {
+    @apply text-lg md:text-xl;
+  }
+  b {
+    @apply font-semibold;
+  }
 }
