--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -62,16 +62,16 @@
   h4,
   h5,
   h1 {
-    @apply text-4xl leading-[1.1] md:text-5xl lg:text-6xl xl:text-7xl;
+    @apply text-3xl leading-[1.1] md:text-4xl lg:text-5xl xl:text-6xl;
   }
   h2 {
-    @apply text-3xl md:text-4xl;
-  }
-  h3 {
     @apply text-2xl md:text-3xl;
   }
+  h3 {
+    @apply text-xl md:text-2xl;
+  }
   h4 {
-    @apply text-lg md:text-xl;
+    @apply text-base md:text-lg;
   }
   b {
     @apply font-semibold;
