feat: add info and agenda site footer
style: add h5 heading on global.css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,6 +73,9 @@
   h4 {
     @apply text-base md:text-lg;
   }
+  h5 {
+    @apply text-xs md:text-base;
+  }
   b {
     @apply font-semibold;
   }
